--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,7 +3,7 @@
 @import "bootstrap/scss/bootstrap.scss";
 @import "swiper/swiper.scss";
 @import "fullpage.js/dist/jquery.fullpage";
-
+@import "malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar";
 /* Import custom styles */
 
 @import "./mixin.scss";
