--- a/scss/_contents.scss
+++ b/scss/_contents.scss
@@ -44,6 +44,24 @@
   }
 }
 
+.tabs-type3{
+  .list-group{display: flex; flex-direction: row;}
+  .list-group-item-action{
+    width:auto; padding: rem(20px) 0 rem(15px) 0; line-height: rem(36px); background:#fff; border:0; border-radius: 0;
+    font-size: rem(24px); font-family: "Noto Sans KR"; font-weight: bold; color:#262626; opacity: 0.36;
+    border-bottom:3px solid transparent;
+    &.active{opacity: 1; border-bottom:4px solid #262626; }
+    & + .list-group-item-action{margin-left:119px;}
+  }
+  .tab-content{
+    .tab-pane{padding:rem(40px) 0;}
+  }
+}
+
+.cont-wrap{
+  position: relative; width:100%; 
+}
+
 .dropdown{
   width:150px;
   .btn{
@@ -81,6 +99,51 @@
 // .section{
 //   position: relative; width:100%; 
 // }  
+
+/* mCustomScroll */
+/* basic style */
+.mCustomScrollbar {-ms-touch-action:pinch-zoom; touch-action:pinch-zoom;}
+.mCustomScrollbar.mCS_no_scrollbar, .mCustomScrollbar.mCS_touch_action {-ms-touch-action:auto; touch-action:auto;}
+.mCustomScrollBox {position:relative; overflow:hidden; height:100%; max-width:100%; outline:none; direction:ltr;}
+.mCSB_container {overflow-y:hidden; overflow-x:hidden; width:auto; height:auto;}
+/* vertical scrollbar y-axis */
+.mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden {margin-right:0;}
+.mCS-dir-rtl > .mCSB_inside > .mCSB_container {margin-right:0; margin-left:30px;}
+.mCS-dir-rtl > .mCSB_inside > .mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden {margin-left:0;}
+.mCSB_scrollTools {position:absolute; width:5px; height:auto; left:auto; top:0; right:0; bottom:0;}
+.mCSB_outside + .mCSB_scrollTools {right:0;}
+.mCS-dir-rtl > .mCSB_inside > .mCSB_scrollTools,
+.mCS-dir-rtl > .mCSB_outside + .mCSB_scrollTools {right:auto; left:0;}
+.mCS-dir-rtl > .mCSB_outside + .mCSB_scrollTools {left:-26px;}
+.mCSB_scrollTools .mCSB_draggerContainer {position:absolute; top:0; left:0; bottom:0; right:0;  height:auto;}
+.mCSB_scrollTools a + .mCSB_draggerContainer {margin:20px 0;}
+.mCSB_scrollTools .mCSB_draggerRail {width:2px; height:100%; margin:0 auto; background:#f0f0f0;}
+.mCSB_scrollTools .mCSB_dragger {cursor:pointer; width:100%; height:30px; z-index:1;}
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {position:relative; width:4px; height:100%; margin:0 auto; text-align:center; background:#cdcdcd;}
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_dragger.mCSB_dragger_onDrag_expanded .mCSB_dragger_bar,
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_draggerContainer:hover .mCSB_dragger .mCSB_dragger_bar {width:12px;}
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_dragger.mCSB_dragger_onDrag_expanded + .mCSB_draggerRail,
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_draggerContainer:hover .mCSB_draggerRail {width:8px;}
+.mCSB_scrollTools .mCSB_buttonUp,
+.mCSB_scrollTools .mCSB_buttonDown {display:block; position:absolute; height:20px; width:100%; overflow:hidden; margin:0 auto; cursor:pointer;}
+.mCSB_scrollTools .mCSB_buttonDown {bottom:0;}
+/* themes :gray */
+.mCS-gray.mCSB_scrollTools .mCSB_draggerRail {width:2px;}
+.mCS-gray.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {width:2px;}
+.mCS-gray.mCSB_scrollTools_horizontal .mCSB_draggerRail {width:100%; height:4px; margin:6px 0;}
+.mCS-gray.mCSB_scrollTools_horizontal .mCSB_dragger .mCSB_dragger_bar {width:100%; height:6px; margin:5px auto;}
+.mCS-gray.mCSB_scrollTools {z-index:3;}
+.mCS-gray.mCSB_scrollTools .mCSB_draggerRail {background-color:#e5e5e5 !important;}
+.mCS-gray.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {background-color:#444 !important;}
+/* themes :purple */
+.mCS-purple.mCSB_scrollTools .mCSB_draggerRail {width:2px;}
+.mCS-purple.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {width:2px;}
+.mCS-purple.mCSB_scrollTools_horizontal .mCSB_draggerRail {width:100%; height:4px; margin:6px 0;}
+.mCS-purple.mCSB_scrollTools_horizontal .mCSB_dragger .mCSB_dragger_bar {width:100%; height:6px; margin:5px auto;}
+.mCS-purple.mCSB_scrollTools {z-index:3;}
+.mCS-purple.mCSB_scrollTools .mCSB_draggerRail {background-color:#e5e5e5 !important;}
+.mCS-purple.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {background-color:#444 !important;}
+
 
 /*
 - 이용약관 참고
