--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -19,11 +19,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{margin:0; line-height: 1;}
 ol, ul, dl{margin:0; padding:0;}
 
 .form-control:focus, *:focus,
-.form-control:active, *:active{outline: 0; box-shadow: none;}
+.form-control:active, *:active{outline: 0 !important; box-shadow: none !important;}
 
-.container-fluid{position: relative;}
+.container, .container-fluid{position: relative;}
 @include media-breakpoint-up(xl) {
-  .container-fluid{max-width: rem(1280px); padding:0;}
+  .container, .container-fluid{max-width: rem(1280px); padding:0;}
 }
 .line-clamp-2{display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden;}
 .bg-1{background-color: #fefefe;}
