--- a/scss/_contents.scss
+++ b/scss/_contents.scss
@@ -67,10 +67,10 @@
   .btn{
     &.dropdown-toggle{
       padding:rem(10px) rem(48px) rem(10px) rem(24px); width:100%;
-      border-radius: rem(20px); border:0; 
+      border-radius: rem(32.5px); border:0; text-align: left;
       font-family: "Noto Sans KR"; font-size: rem(13px); font-weight: 500; color:#242424;
       background:#e7e7e7 url(../images/icon-arrow-down-gray-25x25-3x.png) no-repeat right 15px center; background-size: rem(25px) auto;
-      &:focus{color:#ffffff; background:#242424 url(../images/icon-arrow-down-000-25x25-3x.png) no-repeat right 15px center; background-size: rem(25px) auto;}
+      &:focus, &:active{color:#ffffff; background:#242424 url(../images/icon-arrow-down-000-25x25-3x.png) no-repeat right 15px center; background-size: rem(25px) auto;}
       &::after{display: none;}
       // &.btn-secondary{border:0; background:#242424; color:#fff;}
     }
@@ -99,6 +99,47 @@
 // .section{
 //   position: relative; width:100%; 
 // }  
+.modal{
+  .modal-content{padding:rem(20px) rem(20px) rem(40px) rem(20px); border-radius: 16px; box-shadow: 0 -3px 4px 0 rgba(0, 0, 0, 0.1); background-color: #ffffff;}
+  .modal-title{margin-top:rem(20px); font-family: "Noto Sans KR"; font-size: rem(20px); font-weight: 500; color: #262626;}
+  &.show{display: block;}
+  .modal-header .close{
+    position: absolute; top:rem(15px); right:rem(18px);
+    margin:0; padding: 0; width:rem(21px); height:rem(21px); text-indent: -9999999999px;
+    opacity: 1; text-shadow: none;
+    background: url(../images/ic-24-popup-x-000-21x21-3x.png) no-repeat 0 0; background-size: 100% auto;
+    &:hover{opacity: 1;}
+  }
+  .modal-body{
+    padding:rem(13px) 0 0 0;
+    .input-group{
+      border-bottom:1px solid #232323;
+      .form-control-plaintext{
+        margin-bottom:rem(9px); padding:0; line-height: rem(24px); font-family: "Noto Sans KR"; 
+      }
+      .btn-search{margin-bottom:rem(9px);}
+    }
+  }
+  .country-list{
+    margin-top:22px;
+    & + .country-list{margin-top:rem(30px);}
+    h6{
+      display: inline-block; line-height: rem(19px); padding:rem(3px) rem(11px);
+      font-family: "Noto Sans KR"; font-size: rem(13px); font-weight: normal; color: #262626;
+      border:1px solid #979797; border-radius: rem(12.9px);
+    }
+    ul{
+      li{margin-top:rem(16px); padding-right:rem(10px); width:50%; @include ellipsis(1); }
+    }
+    .country{
+      padding:0 rem(4px) 0 rem(37px); line-height:1.2; background-size: rem(29px) rem(29px); cursor: pointer;
+      font-family: "Noto Sans KR"; font-size: rem(13px); color: #262626; font-weight: normal;
+      &>span{display: block; font-size: rem(12px); color: #919191;}
+    }
+  }
+}
+
+
 
 /* mCustomScroll */
 /* basic style */
