--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,38 +1,38 @@
 .fullpage-wrapper{
     // min-width: 1580px;
-    .section .container-fluid{padding-top:rem(95px);}
+    .section:not(.main-visual) .container-fluid{padding-top:rem(95px);}
 }
 .main-visual{
     position: relative; width:100%; height: 100%;
     .swiper-container{width:100%; height: 100%;}
     .swiper-slide *{transition: all 0.1s ease-out;}
-    div[class*="main-visual-bg"] {position: absolute; left:0; top:0; right:0; bottom:0; }
+    div[class*="main-visual-bg"] {position: absolute; left:0; right:0; top:0; bottom:0; }
     .main-visual-bg-01{background: url(../images/main-visual-bg-01.png) no-repeat top center; background-size: cover;}
     .main-visual-bg-02{background: url(../images/main-visual-bg-02.png) no-repeat top center; background-size: cover;}
     .main-visual-bg-03{background: url(../images/main-visual-bg-03.png) no-repeat top center; background-size: cover;}
     .main-visual-bg-04{background: url(../images/main-visual-bg-04.png) no-repeat top center; background-size: cover;}
-    .main-visual-bg-05{background: linear-gradient(238deg, #854ffd 90%, #3822f3 65%, #2372e7 42%, #0ce3e3 16%);}
+    .main-visual-bg-05{background-color: #e8eff8;}
     
     .main-visual-bg-line-01{
-        background: url(../images/main-visual-line-1300x463-3x.png) no-repeat bottom 30% left 60%; background-size: rem(1300px) auto;
+        background: url(../images/main-visual-line.png) no-repeat top center; background-size: cover;
         transform: scale(0); 
         opacity: 0;
-        transition: all 1s ease;
-        transition-delay: 0.5s;
+    }
+    .main-visual-bg-currency-01{
+        background: url(../images/main-visual-currency.png) no-repeat top -30px center; background-size: 100vw auto;
+        left:50% !important;
+        right:50% !important;
     }
     .main-visual-bg-obj-05{
-        background:url(../images/main-visual-bg-05.png) no-repeat bottom 48% left 76%; background-size: rem(462px) auto;
+        background:url(../images/main-visual-bg-05.png) no-repeat top center; background-size: cover;
         opacity: 0;
-        transition: all 1s ease;
-        transition-delay: 0.5s;
     }
-    @media (max-width: 1580px){
-        .main-visual-bg-line-01{background-position: bottom 21% left 62%; background-size: rem(1237px) auto;}
-        .main-visual-bg-obj-05{background-position: bottom 45% left 77%; background-size: rem(400px) auto;}
+    @media (min-width: 1580px){
+        .main-visual-bg-obj-05{background-position: center center; background-size: rem(1580px) auto;}
     }
     .cont-box{display:block;width:100%; height: 100%; overflow: hidden;}
     .caption{
-        position:absolute; left:50%; top:50%; transform: translate(-50%, -50%); right:inherit; bottom:inherit; text-align: left; color: #242424; 
+        position:absolute; left:50%; top:50%; transform: translate(-130px, -50%); right:inherit; bottom:inherit; text-align: left; color: #242424; 
         strong{font-size: rem(65px); font-family: Lato; font-weight: bold;}
         strong>span{font-size: rem(77px);}
         p{margin:rem(12px) 0 0 0; padding:0 rem(12px); line-height: rem(50px); font-size: rem(36px);color: #000000; font-weight: bold;}
@@ -41,13 +41,19 @@
         strong, p{opacity: 0; transition: opacity 1s ease-out; transition-delay: 0.5s;}
     }
     .main-visual-bg-01{
-        .caption>strong{font-size: rem(64px); line-height: rem(68px); font-family: "Apple SD Gothic Neo"; font-weight: 600;}
+        & + .caption strong{line-height: rem(70px); font-family: "Noto Sans KR";}
+        & + .caption p{margin:rem(32px) 0 0 0; padding:0;}
     }
     .swiper-slide-active.effect{
-        .main-visual-bg-line-01{transform: scale(1);opacity: 1; transition-delay: .1s;}
+        .main-visual-bg-line-01{transform: scale(1); opacity: 1; transition: all 1.2s ease; transition-delay: 0.3s;}
+        .main-visual-bg-currency-01{left:0 !important; right:0 !important; transition: all 1.2s ease; transition-delay: 0.6s;}
+        .main-visual-bg-01 + .caption strong{animation-delay:0.9s}
+        .main-visual-bg-01 + .caption p{animation-delay:1.2s}
         .main-visual-bg-obj-05{-webkit-animation: 1.2s moveleft ease-out forwards;animation: 1.2s moveleft ease-out forwards;animation-delay:.1s}
-        strong{-webkit-animation: 1.2s movetop ease-out forwards;animation: 1.2s movetop ease-out forwards;animation-delay:.1s}
-        p{-webkit-animation: 1.2s movetop ease-out forwards;animation: 1.2s movetop ease-out forwards;animation-delay:.4s}
+        .caption{
+            strong{-webkit-animation: 1.2s movetop ease-out forwards;animation: 1.2s movetop ease-out forwards;}
+            p{-webkit-animation: 1.2s movetop ease-out forwards;animation: 1.2s movetop ease-out forwards;animation-delay:.2s}
+        }
     }
     .carousel-indicators{
         margin-bottom: rem(80px);
@@ -74,17 +80,19 @@
 }
 .exchange-calc{
     // display: none;
-    position: absolute; left:rem(80px); top:rem(150px); padding:rem(7px) rem(20px); width:rem(404px);height: rem(599px);
-     border-radius: rem(16px); background-color: #ffffff; z-index: 100;
-     box-shadow: 0 2px 16px 2px rgba(105, 105, 105, 0.5);
+    position: absolute; left:50%; top:50%; transform: translate(-640px, -50%); 
+    padding:rem(24px) rem(20px); width:rem(440px);height: rem(617px);
+    border-radius: rem(16px); background-color: #ffffff; z-index: 100;
+    box-shadow: 0 2px 16px 2px rgba(105, 105, 105, 0.5);
      .desc{
-         padding-left:rem(10px);  font-family: "Noto Sans KR"; color: #231916;
-         h2{margin-top:15px; font-size: rem(32px); font-weight: bold; line-height: rem(45px); }
-         p{margin-top:8px; font-size: rem(16px); font-weight: bold;line-height: 1.4;}
+         font-family: "Noto Sans KR"; color: #231916;
+         h2{margin-top:rem(4px); font-size: rem(26px); font-weight: bold; line-height: rem(38px); letter-spacing: rem(-1.2px); }
+         p{margin-top:rem(15px); font-size: rem(18px); font-weight: bold;line-height: rem(30px);}
          p>span{display: block;  font-weight: lighter; line-height: 1.3;}
      }
      .form-group{
-         margin:rem(10px) 0 0; border:0; background: transparent;
+         margin:rem(16px) 0 0;
+          border:0; background: transparent;
          h5{padding-left:rem(10px); font-family: "Noto Sans KR"; font-size: rem(14px); line-height: rem(20px); font-weight: bold; color: #989898;}
          .cal-tooltip{
              position: absolute; right:rem(-30px); top:rem(-27px); width:rem(129px); height: rem(32px); line-height: rem(32px);
@@ -97,10 +105,14 @@
              .input-group-prepend{padding:0 rem(10px) 0 rem(14px);}
              .dropdown{
                  width:rem(240px); 
+                 .btn.dropdown-toggle{
+                    text-align: left; white-space: initial;
+                    &>span{display: inline-block; line-height: rem(20px); max-height: rem(40px); overflow: hidden;}
+                 }
                  &.currency-dropdown{
                      width:auto;
                      .btn.dropdown-toggle{
-                         padding:0 rem(24px) 0 0;border-radius: 0; border:0; 
+                         padding:0 rem(24px) 0 0;border-radius: 0; border:0;
                          background:transparent url(../images/icon-arrow-down-gray-25x25-3x.png) no-repeat right 5px center; background-size: rem(20px) auto;
                     }
                     .dropdown-menu{width:auto; min-width: inherit;}
@@ -115,14 +127,17 @@
         }
     }
     .sending{
-        position: relative; margin-top:10px; padding:rem(38px) 0 rem(38px) rem(18px);
-        &::before{ 
-            position: absolute; left:rem(33px); top:50%; transform: translateY(-50%);
-            width:0; height:109px; border-left:2px dotted #d4d4d4; content: '';
+        position: relative; margin:rem(16px) 0 rem(16px) rem(30px); padding:rem(10px) 0 rem(16px) 0; border-left:2px dotted #d4d4d4;
+        &::before{
+            display: block; position: absolute; left:-17px; top:50%; transform: translateY(-50%); width:rem(33px); height: rem(33px); content: '';
+            background: url(../images/ico-send-money-33x33-3x.png) no-repeat left center; background-size:rem(33px) rem(33px); 
         }
         .input-group{margin:0;}
         img{width:33px; height: 33px;}
-        .dropdown{margin-left:38px;}
+        .dropdown{
+            margin-left:53px;
+            & + .dropdown{margin-top:3px;}
+        }
     } 
     .result{
         margin-top:rem(20px); padding:rem(20px) 0 0 rem(20px); list-style: none; border-top:2px dotted #d4d4d4;
@@ -140,10 +155,18 @@
     &.KRW{background: url(../images/currency/flag-korea-40x40-3x.png) no-repeat left center; background-size: rem(40px) auto;}
     &.AUD{background: url(../images/currency/flag-aud-40x40-3x.png) no-repeat left center; background-size: rem(40px) auto;}
 }
+.country{
+    display: inline-block; padding:0 rem(4px) 0 rem(67px); line-height: rem(40px);
+    font-family: Lato; font-size: rem(18px); font-weight: bold; color: #161616;
+    &.KR{background: url(../images/currency/flag-korea-40x40-3x.png) no-repeat left center; background-size: rem(40px) auto;}
+    &.AUD{background: url(../images/currency/flag-aud-40x40-3x.png) no-repeat left center; background-size: rem(40px) auto;}
+    &.hungary{background: url(../images/currency/flag-hungary-29x29-3x.png) no-repeat left center; background-size: rem(40px) auto;}
+}
+
 .main-conts-01{
-    h3{font-family: Lato; font-size: rem(48px); font-weight: bold; color: #18191a;}
-    h4{margin-top:rem(25px); font-family: "Noto Sans KR"; font-size: rem(24px); font-weight: bold; color: #18191a;}
-    p{margin:rem(62px) 0 rem(54px); line-height: rem(45px); font-family: "Noto Sans KR"; font-size: rem(30px); font-weight: bold; color: #9c9b9c;}
+    h3{font-family: Lato; font-size: rem(48px); line-height: rem(57px); font-weight: bold; color: #18191a;}
+    h4{margin-top:rem(25px); font-family: "Noto Sans KR"; font-size: rem(24px); line-height: rem(36px); font-weight: bold; color: #18191a;}
+    p{margin:rem(40px) 0 rem(55px); line-height: rem(45px); font-family: "Noto Sans KR"; font-size: rem(30px); font-weight: 500; color: #9c9b9c;}
     p>strong{color:#141414;}
     .container-fluid{opacity: 0; transition: 1s;}
     &.effect{
@@ -165,9 +188,9 @@
       &.float-left{
         font-family: "Noto Sans KR";
         small{font-size: rem(22px); line-height: 1.77; font-weight: 500; color: #18191a;}
-        p{font-size: rem(30px); line-height: 1.45; font-weight: 500; color: #9c9c9c;} 
+        p{font-size: rem(36px); line-height: 1.45; font-weight: 500; color: #9c9c9c;} 
         p>strong{color: #141414;}
-        .btn{margin-top:rem(90px);}
+        .btn{margin-top:rem(57px);}
       } 
       &.float-right{
             opacity: 1;
@@ -244,6 +267,7 @@
         }
         &.bg-1{background: #4f56fa; color:#fff;}
         &.bg-2{background: #fed403; color:$dark;}
+        img.arcode{display: block; position: absolute; width:rem(146px); right:rem(40px); bottom:rem(35px);}
     }
 }
 @keyframes marquee {
