--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,13 +1,13 @@
 // Styling for the navbar
 .navbar {
-  position: fixed; top:0; left:0; padding:0; width:100%; height: auto;  text-align: center; 
-  background: rgba(#000000, 0.05); z-index: 100;
+  position: fixed; top:0; left:0; padding:0; width:100%; height: auto;  text-align: center; z-index: 100;
+  // background: rgba(#000000, 0.05); 
   *{transition: all 0.2s ease-out;}
   .navbar-toggler{margin:0; padding:0; width:rem(40px); height: rem(40px); border:0; border-radius: 0;}
   .navbar-toggler:hover, .navbar-toggler:focus{outline: 0;}
   .navbar-toggler.collapsed{
     & + #navbar-allmenu{
-      &.collapsing {left: 100%;}
+      &.collapsing {top: -100%; opacity: 0;}
     }
   }
   .navbar-toggler-icon{
@@ -46,6 +46,14 @@
     .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#9e9e9e;}
     .navbar-toggler-icon{background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center center; background-size: 40px 40px;}
   }
+  &.von{
+    background: transparent;
+    .logo-img{background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top center; background-size: 100% auto;}
+    .navbar-brand + .navbar-nav ul>.nav-item .nav-link,
+    .navbar-brand + .navbar-nav .nav>.nav-item.active .nav-link{color:#3b3b3b;}
+    .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#9e9e9e;}
+    .navbar-toggler-icon{background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center center; background-size: 40px 40px;}
+  }
   &.sub{
     position: relative; background: $white;
     .navbar-header{padding-top:rem(30px);}
@@ -59,12 +67,13 @@
 
 #navbar-allmenu{
   position: fixed; left: 0; top:0; width:100%; padding:rem(30px) 0 0; height: auto; background:#262626;
-  transition: left 1s ease !important;
-  &.collapse:not(.show){display: block !important; left: 100%;}
-  &.collapse.show{display: block !important; left: 0;}
+  transition: all 1s ease !important;
+  &.collapse:not(.show){display: block !important; top: -100%;  opacity: 0;}
+  &.collapse.show{display: block !important; top: 0;  opacity: 1;}
   &.collapsing {
-    left: 0;
-    transition: left 1s ease !important;
+    top: 0;
+    opacity: 1;
+    transition: all 1s ease !important;
   }
   .navbar-collapse{
     .navbar-collapse-header{
