--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -149,3 +149,16 @@
 @include media-breakpoint-down(lg) {
   .navbar .navbar-brand + .navbar-nav{display: none;}
 }
+
+@include media-breakpoint-down(sm) {
+  .navbar .navbar-header{padding:rem(15px)  0;}
+  .navbar{
+    background: $white;
+    .navbar-header{padding-top:rem(30px);}
+    .logo-img{background: url(../images/hanpass-logo-180x30-000-3x.png) no-repeat top center; background-size: 100% auto;}
+    .navbar-brand + .navbar-nav ul>.nav-item .nav-link,
+    .navbar-brand + .navbar-nav .nav>.nav-item.active .nav-link{color:#3b3b3b;}
+    .navbar-brand + .navbar-nav .nav>.nav-item .nav-link{color:#9e9e9e;}
+    .navbar-toggler-icon{background: url(../images/ic-24-popup-40x40-000-3x.png) no-repeat center center; background-size: 40px 40px;}
+  }
+}
